--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My First Website</title>
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
@@ -70,6 +71,7 @@
         </tr>
         </tbody>
     </table>
+
     <hr>
     <a href="hobbies.html">Challenges</a>
     <a href="contact.html">Contact me</a>
